# cowmangler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt  run.sh
inc/: player.h
src/: main.cpp  player.cpp
src/components/: CollisionComponent.cpp  CollisionComponent.h  CollisionSystem.cpp  MovementComponent.cpp  MovementComponent.h
src/core/: Window.h
src/entity/: Entity.h  Player.cpp  Player.h
src/renderer/: Renderer.cpp  Renderer.h
src/world/: Level.cpp  Level.h
